# smadex-ltv-prediction

./: .gitignore  ITERATION_README.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
config/: config.yaml  config_test.yaml  config_test_large.yaml  config_test_medium.yaml  config_test_small.yaml  config_test_xlarge.yaml  config_variant_1.yaml  config_variant_2.yaml  config_variant_3.yaml  config_variant_4.yaml  features.yaml
docs/: SESSION_PARSING_FIX.md
frontend/: app.py
notebook/: notebook3185069535.ipynb
notebooks/: eda.ipynb
scripts/: compare_results.py  evaluate.py  evaluate_holdout.py  predict.py  predict_chunked.py  submit_kaggle.py  test_model_validation.py  train.py
src/: types.py
src/data/: loader.py  missing_handler.py  preprocessor.py
src/features/: engineer.py  selector.py
src/inference/: predictor.py
src/models/: buyer_classifier.py  calibration.py  ensemble.py  losses.py  revenue_regressor.py  threshold_optimizer.py
src/sampling/: histos.py
src/training/: trainer.py
src/utils/: logger.py  metrics.py
tests/: check_columns.py  example_usage.py  test_before_after.py  test_dask_optimizations.py  test_data_loader.py  test_data_quality.py  test_dataset_structure.py  test_full_pipeline.py  test_missing_values.py  test_pipeline_improvements.py  test_session_parsing.py
